# atcoder-rust-base

./: .gitignore  Cargo.toml
src/: input.txt  main.rs
tests/: inputs.rs
