[package]
name = "practice"
version = "0.1.0"
authors = ["shibu-t"]
edition = "2021"

[[bin]]
name = "main"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proconio = { version = "=0.4.5", features = ["derive"] }

[dev-dependencies]
cli_test_dir = "0.1"